Sundry Fixes (Share target, alignment, full screen)
1. ShareTarget now automatically saves, without any customer interation
2. Fixed a margin in the tiles to increase the gap betweent title & abstract
3. Fixed issues pressing escape from fullscreen

--- a/App/css/default.css
+++ b/App/css/default.css
@@ -406,7 +406,7 @@ signedIn-articleList .win-itemcontainer .win-focusedoutline {
     overflow: hidden;
     font-size: 14px;
     margin: 8px;
-    margin-top: 4px;
+    margin-top: 8px;
     margin-bottom: 4px;
 }
 
